# Gadget-Injector

./: AUTHORS  Makefile.am  NEWS  README.md  build.sh  clear.sh  configure.in  test.sh
base/: Makefile.am  base.c
base/include/: base.h
include/: APIs.h
lib/: Makefile.am  configure.in
load/: APIs.c  Makefile.am  inner_interface_init.c
load/include/: inner_interface_init.h
parse/: Makefile.am  parse.c
ptrace/: Makefile.am  inner_interface_ptrace.c
ptrace/include/: inner_interface_ptrace.h
src/: Makefile.am  main.c
