#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([injector-so], [1.0], [ass163@qq.com])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE(foreign)

AC_PROG_CC
AC_PROG_LIBTOOL

CFLAGS+=" -g -ggdb3 -O0 -Wall -posix -fno-inline -fPIC -std=c99"

AC_CONFIG_FILES([Makefile])
#AC_PREFIX_DEFAULT(/usr/lib64)
AC_OUTPUT
